--- a/downey/.classpath
+++ b/downey/.classpath
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="ch03"/>
+	<classpathentry kind="src" path="ch04"/>
+	<classpathentry kind="src" path="ch05"/>
+	<classpathentry kind="src" path="ch06"/>
+	<classpathentry kind="src" path="ch07"/>
+	<classpathentry kind="src" path="ch08"/>
+	<classpathentry kind="src" path="ch09"/>
+	<classpathentry kind="src" path="ch10"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
