--- a/downey/.classpath
+++ b/downey/.classpath
@@ -11,6 +11,6 @@
 	<classpathentry kind="src" path="ch10"/>
 	<classpathentry kind="src" path="ch11"/>
 	<classpathentry kind="src" path="ch12"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
